--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "ecommerce-frontend",
+  "name": "ecommerce-frontend-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.0.0",
-    "aws-amplify": "^5.0.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-icons": "^4.12.0"
+    "react-router-dom": "^6.22.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.10"
   }
 }
